<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/fav_article_title"
                android:layout_width="267dp"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/title"
                android:textColor="@color/colorTextTitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/fav_article_img"
                android:layout_width="78dp"
                android:layout_height="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/fav_article_source"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/source"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fav_article_date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date"
                app:layout_constraintBaseline_toBaselineOf="@+id/fav_article_source"
                app:layout_constraintEnd_toStartOf="@+id/fav_article_tag"
                app:layout_constraintStart_toEndOf="@+id/fav_article_source" />

            <TextView
                android:id="@+id/fav_article_tag"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/tag"
                app:layout_constraintBaseline_toBaselineOf="@+id/fav_article_date"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>